syntax = "proto3";
package entropy_grpc;
import "google/protobuf/empty.proto";

service Entropy {
    // Alice queries for the list of signing parties
    rpc GetParty (GetPartyRequest) returns (stream GetPartyResponse);

    rpc receiveIpAddress (IpAddress) returns (IpAddressResponse);
}
message GetPartyRequest{
    // Alice's IP address
    string address = 1;
}
message GetPartyResponse{
    repeated string addresses = 1;
}

message IpAddress {
  string address = 1;
}

message IpAddressResponse {
  bool confirmed = 1;
}
